// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root
        flat"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly disabled 1`] = `
<div
  className="root
        flat
        isRootDisabled"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly error 1`] = `
<div
  className="root
        error"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly raised 1`] = `
<div
  className="root
        flat
        
        isRootRaised"
>
  <p>
    Card content
  </p>
</div>
`;
